# mantrix-ai

./: .gitignore  .replit  README.md  frontend_server.py  index.html  mantrix.env  package-lock.json  package.json  pyproject.toml  replit.md  run_frontend.py  start_all_services.py  start_dev_server.py  start_frontend.sh
.github/workflows/: ci.yml
apps/backend/: check_users.py  clear_users.py  main.py  quick_progress_test.py  quick_resume_test.py  requirements.txt  test_progress_tracker.py  test_recommendation_system.py  test_resume_builder.py  test_roadmap_features.py
apps/backend/api/: auth.py  external_roadmap.py  progress.py  recommendation.py  resume.py  roadmap.py  routes.py  (+1 more)
apps/frontend/: .npmrc  index.html  install_deps.sh  package-lock.json  package.json  tailwind.config.js  vite.config.ts
attached_assets/: Pasted--Multi-Track-Merge-Timeline-Planning-System-Implement-functionality-to-allow-users-to-combine-mul-1754189764741_1754189764743.txt  Pasted--Prompt-7-Resume-Builder-Modes-Progress-Tracker-Integration-Goal-Build-a-flexible-resume-buil-1754185772045_1754185772047.txt  Pasted-Implement-User-Authentication-and-Secure-Roadmap-Access-Goal-Replace-hardcoded-user-id-test-u-1754183224778_1754183224782.txt  Pasted-Resume-Builder-Modes-Progress-Tracker-Integration-Goal-Build-a-flexible-resume-builder-tightl-1754185908503_1754185908504.txt
client/: App.tsx
docs/: external-roadmap-api.md
infra/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  docker-entrypoint.sh  nginx.conf
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
(+61 files in other folders)
